# tarot-cli

./: .gitignore  Makefile  README.md  build.py  install-user.ps1  install-user.sh  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: release.yml
src/: builders.py  draws.py  intent.py  main.py  models.py  spreads.py
tests/: test_all.py
