[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coverage>=7.9.2",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.2",
]
