[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
version = "1.0.0"
description = "CLI-based Tarot tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coverage>=7.9.2",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.2",
]
